# truck_driver_app_microservice

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  dotenv_.py  logs.py  main.py  pyproject.toml  pytest.ini  truckdriver_db.sqlite3
__tests__/: fixtures.py  test_async_httpclient.py
__tests__/tests_models/: test_SessionUserModel_unvalided.py  test_SessionUserModel_valid.py
project/: __init__.py  asynchttp-client.py  asynchttp_client.py  middleware.py  middlewares.py  permissions.py
project/db/: corn.py  models.py
project/routers/internal/: urls.py  views.py
templates/: index.html
templates/layout/: index.html
