[project]
name = "backend-truckdriver"
version = "0.1.0"
description = ""
authors = [
    {name = "Denis",email = "work80@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "fastapi-cloud-cli (>=0.1.5,<0.2.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"

